// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> should render LoadingIndicator correctly 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      Array [
        Object {},
        Object {
          "height": 94.28571428571428,
          "width": 94.28571428571428,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Aguarde"
    autoPlay={true}
    contrast={false}
    enableMergePathsAndroidForKitKatAndAbove={false}
    forwardedRef={[Function]}
    loop={true}
    onAnimationFinish={[Function]}
    onLayout={[Function]}
    progress={0}
    resizeMode="contain"
    speed={1}
    style={
      Object {
        "height": 94.28571428571428,
        "width": 94.28571428571428,
      }
    }
    testID="loading"
    variant="circular"
  />
</View>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with accessibility 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      Array [
        Object {},
        Object {
          "height": 94.28571428571428,
          "width": 94.28571428571428,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Aguarde"
    autoPlay={true}
    contrast={false}
    enableMergePathsAndroidForKitKatAndAbove={false}
    forwardedRef={[Function]}
    loop={true}
    onAnimationFinish={[Function]}
    onLayout={[Function]}
    progress={0}
    resizeMode="contain"
    speed={1}
    style={
      Object {
        "height": 94.28571428571428,
        "width": 94.28571428571428,
      }
    }
    testID="loading"
    variant="circular"
  />
</View>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with contrast 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      Array [
        Object {},
        Object {
          "height": 94.28571428571428,
          "width": 94.28571428571428,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Aguarde"
    autoPlay={true}
    contrast={true}
    enableMergePathsAndroidForKitKatAndAbove={false}
    forwardedRef={[Function]}
    loop={true}
    onAnimationFinish={[Function]}
    onLayout={[Function]}
    progress={0}
    resizeMode="contain"
    speed={1}
    style={
      Object {
        "height": 94.28571428571428,
        "width": 94.28571428571428,
      }
    }
    testID="loading"
    variant="circular"
  />
</View>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with large 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      Array [
        Object {},
        Object {
          "height": 188.57142857142856,
          "width": 188.57142857142856,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Aguarde"
    autoPlay={true}
    contrast={false}
    enableMergePathsAndroidForKitKatAndAbove={false}
    forwardedRef={[Function]}
    loop={true}
    onAnimationFinish={[Function]}
    onLayout={[Function]}
    progress={0}
    resizeMode="contain"
    speed={1}
    style={
      Object {
        "height": 188.57142857142856,
        "width": 188.57142857142856,
      }
    }
    testID="loading"
    variant="circular"
  />
</View>
`;

exports[`<LoadingIndicator /> should render LoadingIndicator with variant 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      Array [
        Object {},
        Object {
          "height": 94.28571428571428,
          "width": 94.28571428571428,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Aguarde"
    autoPlay={true}
    contrast={false}
    enableMergePathsAndroidForKitKatAndAbove={false}
    forwardedRef={[Function]}
    loop={true}
    onAnimationFinish={[Function]}
    onLayout={[Function]}
    progress={0}
    resizeMode="contain"
    speed={1}
    style={
      Object {
        "height": 94.28571428571428,
        "width": 94.28571428571428,
      }
    }
    testID="loading"
    variant="linear"
  />
</View>
`;
